Added authorization specs in Swagger
